Uses List.of in PowerMeter constructor.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>